I got version syncing working, now I need to get the website working, and get name generating working again

--- a/BlizzTrackVT/BlizzTrackVT.csproj
+++ b/BlizzTrackVT/BlizzTrackVT.csproj
@@ -13,6 +13,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BNetLib\BNetLib.csproj" />
+    <ProjectReference Include="..\BTSharedCore\BTSharedCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
