--- a/BlizzTrackVT/BlizzTrackVT.csproj
+++ b/BlizzTrackVT/BlizzTrackVT.csproj
@@ -21,4 +21,10 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Resource Include="appsettings.Production.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
