--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,16 @@ on:
     branches:
       - main
 jobs:
+  login:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}:
+          
   build_website:
     name: Push and Build website
     runs-on: ubuntu-latest
@@ -17,8 +27,6 @@ jobs:
         with:
           context: .
           file: ./BlizzTrackVT/Dockerfile
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: blizztrack/blizztrackvt
-          tag_with_ref: true
+          tags: |
+            blizztrack/blizztrackvt:latest
